--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -225,7 +225,7 @@
   background:#000;
   opacity:0.7;
   filter:alpha(opacity=30);
-  position:absolute;
+  position: fixed;
   top:0px;
   left:0px;
   z-index:2000;
