--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -376,6 +376,7 @@ article p img.coverImage {
 
 #about blockquote {
 	box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	width: 90%;
 	margin: auto;
 	padding: 20px 30px;
@@ -418,6 +419,7 @@ article p img.coverImage {
 	background-color: #6B9BB3;
 	float: left;
 	box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	height: 100%;
 	position: absolute;
 }
@@ -427,6 +429,7 @@ article p img.coverImage {
 	padding: 0 10px;
 	display: block;
 	box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	background-color: #6B9BB3;
 	border-bottom: solid 1px #8FB8CC;
 	font-family: Helvetica, Arial;
