--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -361,8 +361,8 @@ aside { /* FIXME performance opacity: 0.95; */
 }
 
 article p img.coverImage {
-	margin-left: 5px;
-	display: block;
+	margin-left: 10px;
+	display: inline-block;
 	float: right;
 }
 
@@ -576,28 +576,39 @@ a.button:hover {
 
 .commentUser {
 	padding: 0;
-	font-size: 11px;
-	text-align: left;
 	width: 12%;
-	line-height: 20px;
 }
 
-.commentUser span {
-	display: block;
-	font-size: 13px;
-}
+
 
 .commentUser img {
 	width: 70px;
 	height: 70px;
 }
 
+.comment span {
+	display: block;
+	font-size: .8em;
+	text-align: right;
+	margin: 0;
+	padding: 0;
+	padding-right: 20px;
+	margin-top: -15px;
+}
+
+
 .commentBody,textarea {
 	vertical-align: top;
 	border: solid 4px #5994B3;
 	width: 80%;
+	/*min-height: 10px;*/
 	background-color: #66A8CC;
 	padding: 15px;
+}
+
+.commentBody p {
+	margin: 0;
+	padding: 0;
 }
 
 .arrow-left {
