--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -227,12 +227,13 @@ aside input[name="Search"] {
 #sidebar_albums {
 	margin: 0;
 	padding: 0;
+	text-align: center;
 }
 
 #sidebar_albums img {
 	margin-right: 5px;
-	width: 50px;
-	height: 50px;
+	width: 58px;
+	height: 58px;
 	text-align: center;
 }
 
@@ -661,7 +662,8 @@ h2 {
   color: #FFFFBF;
 }
 h3 {
-  color: #FFFFBF; 
+  color: #FFFFBF;
+  text-align: left; 
 }
 section article, header, footer, aside {
   background-color: #609EBF;  
@@ -796,4 +798,26 @@ div.rateit div.rateit-reset
 div.rateit div.rateit-reset:hover
 {
     background-position: 0 -16px;
+}
+/******* youtube ******/
+.playing:after {
+	content: "playing...";
+}
+#player {
+	display: none;	
+}
+
+.has_video:hover {
+	cursor: pointer;
+}
+
+.has_video:before {
+	content: "";
+	display: inline-block;
+	background-image: url('../images/playIcon.png');
+	background-repeat: no-repeat;
+	width: 20px;
+	height: 20px;
+	vertical-align: middle;
+	margin-right: 5px;
 }
