Commit from JBoss Tools

--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -811,6 +811,14 @@ div.rateit div.rateit-reset:hover
 	cursor: pointer;
 }
 
+#tracksListing {
+	list-style-position: outside;
+	margin-left: 20px;
+}
+#tracksListing li {
+	width: 99%;
+}
+
 .has_video:before {
 	content: "";
 	display: inline-block;
