--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -841,3 +841,11 @@ div.rateit div.rateit-reset:hover {
 	display: block;
 	padding-left: 1.5em;
 }
+.playerLoading {
+	position: absolute;
+	top: 900em;
+}
+.playerReady {
+	position: static;
+	top: 0;
+}
