--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -65,7 +65,7 @@ body {
   line-height: 160%;
   overflow-y: scroll;
   /* added background */
-  background-image: url("../bg.jpg");
+  background-image: url("../images/bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
